--- a/example/Makefile
+++ b/example/Makefile
@@ -7,9 +7,8 @@ CFLAGS = -fPIC -shared -std=c++11
 $(warning CFLAGS is $(CFLAGS))
 
 #头文件路径
-INCLUDE := -I/home/timer/Fast-DDS/install/include
-INCLUDE += -I/home/timer/Fast-DDS
-INCLUDE += -I.
+INCLUDE := -I/home/timer/Fast-DDS/install/include   #FastDDS的头文件目录
+INCLUDE += -I/home/timer/Fast-DDS                   #cmw目录的上一级目录
 
 #找出当前目录下，所有的源文件
 SRCS := $(shell find ../* -type f | grep '\.cpp' | grep -v './writer.cpp' | grep -v './reader.cpp' | grep -v './test.*\.cpp')
@@ -21,7 +20,7 @@ $(warning OBJS is ${OBJS})
 
 
 #第三方动态库的路径
-ThirdPartyLibPath := /home/timer/Fast-DDS/install/lib
+ThirdPartyLibPath := /home/timer/Fast-DDS/install/lib #FastDDS的动态库目录
 
 #第三方动态库
 ThirdPartyLib := -lfastrtps -lfastcdr -lfoonathan_memory-0.7.3 
