--- a/example/Makefile
+++ b/example/Makefile
@@ -8,6 +8,7 @@ $(warning CFLAGS is $(CFLAGS))
 
 #头文件路径
 INCLUDE := -I/home/timer/Fast-DDS/install/include   #FastDDS的头文件目录
+INCLUDE += -I/home/timer/gtest/build/_install/include #gtest的头文件目录
 INCLUDE += -I../../            #cmw目录的上一级目录
 INCLUDE += -I../thirdparty/    #cmw 引入的第三方库的目录
 # INCLUDE := -I/data/Fast-DDS/install/include   #FastDDS的头文件目录
@@ -38,7 +39,8 @@ $(warning OBJS is ${OBJS})
 	$(AS) -c $< -o $@
 
 #第三方动态库的路径
-ThirdPartyLibPath := /home/timer/Fast-DDS/install/lib #FastDDS的动态库目录
+ThirdPartyLibPath := -L/home/timer/Fast-DDS/install/lib #FastDDS的动态库目录
+ThirdPartyLibPath += -L/home/timer/gtest/build/_install/lib #gtest的动态库目录
 # ThirdPartyLibPath := /data/Fast-DDS/install/lib #FastDDS的动态库目录
 
 #第三方动态库
@@ -47,6 +49,7 @@ ThirdPartyLib += -lpthread
 ThirdPartyLib += -luuid
 ThirdPartyLib += -lrt
 ThirdPartyLib += -latomic
+ThirdPartyLib += -lgtest 
 
 # 动态库名称
 SHARED_LIB = libcmw_v3.so
@@ -58,35 +61,38 @@ SHARED_LIB = libcmw_v3.so
 # 	$(CC) $(INCLUDE) $(CFLAGS) -shared -o $@ $^ -L$(ThirdPartyLibPath) $(ThirdPartyLib)
 
 test_writer: $(OBJS) test_writer.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath) 
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_reader: $(OBJS) test_reader.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_serialize: $(OBJS) test_serialize.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_node_manager: $(OBJS) test_node_manager.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_channel_manager: $(OBJS) test_channel_manager.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_topology_manager: $(OBJS) test_topology_manager.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 	
 test_publisher: $(OBJS) test_publisher.cpp 
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_subscriber: $(OBJS) test_subscriber.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_log: $(OBJS) test_log.cpp
-	$(CC) $(INCLUDE) -o $@.out $^   -L$(ThirdPartyLibPath) $(ThirdPartyLib) -Wl,-rpath=$(ThirdPartyLibPath)
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
 
 test_getenv : test_getenv.cpp	
 	$(CC) -o $@.out $^
-	
+
+test_croutine: $(OBJS) test_croutine.cpp
+	$(CC) $(INCLUDE) -o $@.out $^  $(ThirdPartyLibPath) $(ThirdPartyLib) 
+
 .PHONY:clean
 clean:
 	rm -rf *.out 
