--- a/example/Makefile
+++ b/example/Makefile
@@ -10,13 +10,13 @@ ThirdPartyLibPath := -L/home/timer/Fast-DDS/install/lib \
                      -L/home/timer/gtest/build/_install/lib
 
 ThirdPartyLib := -lfastrtps -lfastcdr -lfoonathan_memory-0.7.3 \
-                 -lpthread -luuid -lrt -latomic -lgtest
+                 -lpthread -luuid -lrt -latomic -lgtest -ldl
 
 # 可执行文件列表
 EXECUTABLES := test_writer test_reader test_serialize test_node_manager \
               test_channel_manager test_topology_manager test_publisher \
               test_subscriber test_log test_getenv test_croutine test_scheduler \
-              test_task test_blocker \
+              test_task test_blocker test_class_loader \
 
 
 # 找出源文件
