--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,7 @@
 # 编译器和选项
-CC = g++
-CFLAGS = -std=c++14
+CC      := g++
+CFLAGS  := -std=c++14 
+DEBUG   := -g 
 INCLUDE := -I/home/timer/Fast-DDS/install/include \
            -I/home/timer/gtest/build/_install/include \
            -I../../ \
@@ -16,7 +17,7 @@ ThirdPartyLib := -lfastrtps -lfastcdr -lfoonathan_memory-0.7.3 \
 EXECUTABLES := test_writer test_reader test_serialize test_node_manager \
               test_channel_manager test_topology_manager test_publisher \
               test_subscriber test_log test_getenv test_croutine test_scheduler \
-              test_task test_blocker test_class_loader \
+              test_task test_blocker test_class_loader test_node \
 
 
 # 找出源文件
@@ -26,14 +27,14 @@ OBJS := $(patsubst %.cpp, %.o, $(SRCS)) $(patsubst %.S, %.o, $(ASMS))
 
 # 编译规则
 %.o: %.cpp
-	$(CC) $(INCLUDE) $(CFLAGS) -c -o $@ $<
+	$(CC) $(INCLUDE) $(CFLAGS) $(DEBUG) -c -o $@ $<
 
 %.o: %.S
 	$(AS) -c $< -o $@
 
 # 生成可执行文件的规则
 $(EXECUTABLES): %: $(OBJS) %.cpp
-	$(CC) $(INCLUDE) -o $@.out $^ $(ThirdPartyLibPath) $(ThirdPartyLib)
+	$(CC) $(INCLUDE) $(DEBUG) -o $@.out $^ $(ThirdPartyLibPath) $(ThirdPartyLib)
 
 # 清理规则
 .PHONY: clean
